[gd_scene load_steps=9 format=3 uid="uid://243h6nll0578"]

[ext_resource type="Script" path="res://game.gd" id="1_2de62"]
[ext_resource type="PackedScene" uid="uid://c8qinc04r4gtf" path="res://background.tscn" id="1_u6jlg"]
[ext_resource type="PackedScene" uid="uid://no5lt6r0mcwc" path="res://weak_ghost.tscn" id="2_fb58j"]
[ext_resource type="PackedScene" uid="uid://c807sqp4yr0to" path="res://player.tscn" id="2_v33ig"]
[ext_resource type="PackedScene" uid="uid://c6lpnvoeyna2o" path="res://game_over.tscn" id="5_y8vrr"]
[ext_resource type="PackedScene" uid="uid://g7t6hrmcf2g3" path="res://menu.tscn" id="6_74tg7"]
[ext_resource type="PackedScene" uid="uid://bomdlh7d1w74d" path="res://instuctions.tscn" id="7_x2by6"]
[ext_resource type="PackedScene" uid="uid://48fkypf8dkfv" path="res://story.tscn" id="8_ut5mi"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2de62")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Background" parent="ColorRect" instance=ExtResource("1_u6jlg")]

[node name="Weak Ghost" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(-20, 2.08165e-12)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost2" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(35, -40)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost3" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(-20, 75)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost4" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(1165, -35)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost5" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(1200, 680)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost6" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(-45, 675)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost7" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(-55, -30)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost8" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(35, -40)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost9" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(-30, 75)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost10" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(1165, -35)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost11" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(1200, 680)
scale = Vector2(0.191929, 0.191929)

[node name="Weak Ghost12" parent="." instance=ExtResource("2_fb58j")]
visible = false
position = Vector2(-45, 675)
scale = Vector2(0.191929, 0.191929)

[node name="Player" parent="." instance=ExtResource("2_v33ig")]
visible = false
position = Vector2(560, 245)
scale = Vector2(0.609116, 0.609116)

[node name="Game Over" parent="." instance=ExtResource("5_y8vrr")]
visible = false

[node name="Menu" parent="." instance=ExtResource("6_74tg7")]

[node name="Instuctions" parent="Menu" instance=ExtResource("7_x2by6")]
visible = false

[node name="Story" parent="Menu" instance=ExtResource("8_ut5mi")]
visible = false

[connection signal="wave_2" from="." to="Weak Ghost7" method="_on_game_wave_2"]
[connection signal="wave_2" from="." to="Weak Ghost8" method="_on_game_wave_2"]
[connection signal="wave_2" from="." to="Weak Ghost9" method="_on_game_wave_2"]
[connection signal="wave_2" from="." to="Weak Ghost10" method="_on_game_wave_2"]
[connection signal="wave_2" from="." to="Weak Ghost11" method="_on_game_wave_2"]
[connection signal="wave_2" from="." to="Weak Ghost12" method="_on_game_wave_2"]
[connection signal="banished" from="Weak Ghost" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost2" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost3" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost4" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost5" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost6" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost7" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost8" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost9" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost10" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost11" to="." method="_on_ghost_banished"]
[connection signal="banished" from="Weak Ghost12" to="." method="_on_ghost_banished"]
[connection signal="menu" from="Game Over" to="Weak Ghost" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Weak Ghost2" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Weak Ghost3" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Weak Ghost4" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Weak Ghost5" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Weak Ghost6" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Weak Ghost7" method="_on_game_over_menu7"]
[connection signal="menu" from="Game Over" to="Weak Ghost8" method="_on_game_over_menu8"]
[connection signal="menu" from="Game Over" to="Weak Ghost9" method="_on_game_over_menu9"]
[connection signal="menu" from="Game Over" to="Weak Ghost10" method="_on_game_over_menu10"]
[connection signal="menu" from="Game Over" to="Weak Ghost11" method="_on_game_over_menu11"]
[connection signal="menu" from="Game Over" to="Weak Ghost12" method="_on_game_over_menu12"]
[connection signal="menu" from="Game Over" to="Player" method="_on_game_over_menu"]
[connection signal="menu" from="Game Over" to="Menu" method="_on_game_over_menu"]
[connection signal="instructions" from="Menu" to="Menu/Instuctions" method="_on_menu_instructions"]
[connection signal="start" from="Menu" to="." method="_on_menu_start"]
[connection signal="start" from="Menu" to="Weak Ghost" method="_on_menu_start"]
[connection signal="start" from="Menu" to="Weak Ghost2" method="_on_menu_start2"]
[connection signal="start" from="Menu" to="Weak Ghost3" method="_on_menu_start3"]
[connection signal="start" from="Menu" to="Weak Ghost4" method="_on_menu_start4"]
[connection signal="start" from="Menu" to="Weak Ghost5" method="_on_menu_start5"]
[connection signal="start" from="Menu" to="Weak Ghost6" method="_on_menu_start6"]
[connection signal="start" from="Menu" to="Weak Ghost7" method="_on_menu_start_extras"]
[connection signal="start" from="Menu" to="Weak Ghost8" method="_on_menu_start_extras"]
[connection signal="start" from="Menu" to="Weak Ghost9" method="_on_menu_start_extras"]
[connection signal="start" from="Menu" to="Weak Ghost10" method="_on_menu_start_extras"]
[connection signal="start" from="Menu" to="Weak Ghost11" method="_on_menu_start_extras"]
[connection signal="start" from="Menu" to="Weak Ghost12" method="_on_menu_start_extras"]
[connection signal="start" from="Menu" to="Player" method="_on_menu_start"]
[connection signal="story" from="Menu" to="Menu/Story" method="_on_menu_story"]
[connection signal="imenu" from="Menu/Instuctions" to="Menu" method="_on_instuctions_imenu"]
[connection signal="smenu" from="Menu/Story" to="Menu" method="_on_story_smenu"]
